--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<html><head>Este eh um exemplo do uso do github, estou aprendendo</head<p>Estah sendo bom aprender o Sistema de Gestao de CodigEstah sendo bom aprender o Sistema de Gestao de Codigo</p>></html>
+<html><head>Este eh um exemplo do uso do github, estou aprendendo</head<p>Estah sendo bom aprender o Sistema de Gestao de CodigEstah sendo bom aprender o Sistema de Gestao de Codigo</p><p>Mais um parágrafo adicionado</p>></html>
